fix tests build errors on windows
There are 36 test failures, but at least I can build the tests.
My current cmake config settings are:

```
        "-DBUILD_SHARED_LIBS=ON",
        "-DBUILD_STATIC_LIBS=OFF",
        "-DCMAKE_CONFIGURATION_TYPES=Debug;Release",
        "-DCMAKE_CXX_STANDARD=17",

        "-DTIMEMORY_USE_PYTHON=OFF",
        "-DTIMEMORY_USE_ARCH=OFF",
        "-DTIMEMORY_USE_MPI=OFF",
        "-DTIMEMORY_BUILD_C=ON",
        "-DTIMEMORY_BUILD_EXAMPLES=ON",
        "-DTIMEMORY_BUILD_TESTING=OFF",
        "-DTIMEMORY_BUILD_MINIMAL_TESTING=ON",
        "-DTIMEMORY_BUILD_TOOLS=ON",
        "-DTIMEMORY_BUILD_GOOGLE_TEST=OFF",
        "-DTIMEMORY_USE_WINSOCK=OFF",

        # vtune setting
        "-DTIMEMORY_USE_VTUNE=ON"
```

```
The following tests FAILED:
         27 - api_tests.category (Failed)
         37 - settings_tests.insert_via_args (Failed)
         38 - settings_tests.insert_via_pointer (Failed)
         40 - settings_tests.push_pop (Failed)
         41 - settings_tests.api_copy (Failed)
         42 - flat_tests.parse (Failed)
         43 - flat_tests.get_default (Failed)
         46 - flat_tests.type_trait (Failed)
         48 - flat_tests.general (Failed)
         49 - timeline_tests.parse (Failed)
         50 - timeline_tests.general (Failed)
         54 - timeline_tests.nested (Failed)
         61 - user_bundle_tests.bundle_0 (Failed)
         62 - user_bundle_tests.bundle_1 (Failed)
         63 - user_bundle_tests.comp_bundle (Failed)
         64 - user_bundle_tests.get (Failed)
         65 - user_bundle_tests.get_bundle (Failed)
         66 - user_bundle_tests.bundle_init_func (Failed)
         67 - user_bundle_tests.bundle_insert (Failed)
         68 - user_bundle_tests.bundle_configure (Failed)
         69 - user_bundle_tests.bundle_configure_ext (Failed)
         70 - user_bundle_tests.bundle_insert_ext (Failed)
         71 - user_bundle_tests.laps (Failed)
         83 - tuple_tests.get (Failed)
         85 - tuple_tests.auto_start (

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -248,18 +248,23 @@ add_timemory_google_test(type_trait_tests
     LINK_LIBRARIES  common-test-libs
                     timemory::timemory-core)
 
+if(NOT WIN32)
+    set(_warning_tests_extra_libs test-debug-flags)
+endif()
 add_timemory_google_test(warning_tests
     SOURCES         warning_tests.cpp
     LINK_LIBRARIES  test-werror-flags
-                    test-debug-flags
+                    ${_warning_tests_extra_libs}
                     timemory::timemory-core)
 
-add_timemory_google_test(socket_tests
-    SOURCES         socket_tests.cpp
-    LINK_LIBRARIES  common-test-libs
-                    timemory::timemory-core
-                    test-werror-flags
-    TIMEOUT         15)
+if (NOT WIN32 OR (WIN32 AND TIMEMORY_USE_WINSOCK))
+    add_timemory_google_test(socket_tests
+        SOURCES         socket_tests.cpp
+        LINK_LIBRARIES  common-test-libs
+                        timemory::timemory-core
+                        test-werror-flags
+        TIMEOUT         15)
+endif()
 
 add_timemory_google_test(settings_tests
     DISCOVER_TESTS
@@ -323,13 +328,17 @@ add_timemory_google_test(kokkosp_tests
                     ${_LIBRARY}
     ENVIRONMENT     ${kokkosp_tests_env})
 
+if (NOT WIN32)
+    set(_extern_test_templates extern-test-templates)
+endif()
+
 add_timemory_google_test(flat_tests
     DISCOVER_TESTS
     SOURCES         flat_tests.cpp
     LINK_LIBRARIES  common-test-libs
                     timemory::timemory-plotting
                     timemory::timemory-core
-                    extern-test-templates
+                    ${_extern_test_templates}
                     ${_LIBRARY})
 
 add_timemory_google_test(timeline_tests
@@ -338,7 +347,7 @@ add_timemory_google_test(timeline_tests
     LINK_LIBRARIES  common-test-libs
                     timemory::timemory-plotting
                     timemory::timemory-core
-                    extern-test-templates
+                    ${_extern_test_templates}
                     ${_LIBRARY})
 
 add_timemory_google_test(data_tracker_tests
@@ -634,16 +643,17 @@ if(TIMEMORY_USE_GPERFTOOLS)
                         ${_LIBRARY})
 endif()
 
-add_timemory_google_test(gperf_fake_cpu_tests
-    DISCOVER_TESTS
-    SOURCES         gperf_cpu_tests.cpp
-    LINK_LIBRARIES  common-test-libs
-                    timemory::timemory-headers
-                    timemory::timemory-plotting
-                    timemory::timemory-analysis-tools
-                    timemory::timemory-core
-                    ${_LIBRARY})
-
+if(NOT WIN32)
+    add_timemory_google_test(gperf_fake_cpu_tests
+        DISCOVER_TESTS
+        SOURCES         gperf_cpu_tests.cpp
+        LINK_LIBRARIES  common-test-libs
+                        timemory::timemory-headers
+                        timemory::timemory-plotting
+                        timemory::timemory-analysis-tools
+                        timemory::timemory-core
+                        ${_LIBRARY})
+endif()
 
 if(TIMEMORY_USE_GOTCHA)
     add_timemory_google_test(gotcha_tests
@@ -716,14 +726,17 @@ if(TIMEMORY_USE_UPCXX)
                         ${_LIBRARY})
 endif()
 
+if(NOT WIN32)
+    set(_variadic_tests_extra_libs test-debug-flags)
+endif()
 add_timemory_google_test(variadic_tests
     DISCOVER_TESTS
     SOURCES         variadic_tests.cpp
     LINK_LIBRARIES  common-test-libs
                     timemory::timemory-plotting
                     timemory::timemory-core
-                    timemory::timemory-dmp
-                    test-debug-flags
+                    timemory::timemory-dmp                    
+                    ${_variadic_tests_extra_libs}
                     ${_LIBRARY})
 
 add_timemory_google_test(derived_tests
