Subset of windows fixes + clang-format
- fixes to google-test setup on Windows
- fixed api_tests
- fixed macro_tests
- _TIM_FILENAME_DELIM -> TIMEMORY_OS_PATH_DELIMITER
- Ignored more warnings on Windows

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -804,7 +804,7 @@ endif()
 
 # Tests recording the symbols of each compiled library
 find_program(NM_EXE NAMES nm)
-if(NM_EXE)
+if(NM_EXE AND NOT WIN32)
     set(_COMPILED_LIBS
         ${TIMEMORY_TOOL_LIBRARIES}
         ${TIMEMORY_COMPILED_LIBRARIES}
