--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,6 +16,28 @@ platform:
 environment:
   CONTINUOUS_INTEGRATION: "true"
   matrix:
+    - CONDA: 38
+      CPP: 17
+      CONFIG: Release
+      EXAMPLES: "ON"
+      TOOLS: "OFF"
+      WINSOCK: "OFF"
+      USE_ARCH: "OFF"
+      USE_PYTHON: "ON"
+      BUILD_C: "ON"
+      BUILD_STATIC: "OFF"
+      BUILD_TESTING: "ON"
+    - CONDA: 37
+      CPP: 14
+      CONFIG: RelWithDebInfo
+      EXAMPLES: "OFF"
+      TOOLS: "OFF"
+      WINSOCK: "OFF"
+      USE_ARCH: "OFF"
+      USE_PYTHON: "ON"
+      BUILD_C: "OFF"
+      BUILD_STATIC: "ON"
+      BUILD_TESTING: "OFF"
     - PYTHON: 36
       CPP: 14
       CONFIG: Debug
@@ -37,28 +59,6 @@ environment:
       USE_PYTHON: "ON"
       BUILD_C: "OFF"
       BUILD_STATIC: "ON"
-      BUILD_TESTING: "OFF"
-    - CONDA: 37
-      CPP: 14
-      CONFIG: RelWithDebInfo
-      EXAMPLES: "OFF"
-      TOOLS: "OFF"
-      WINSOCK: "OFF"
-      USE_ARCH: "OFF"
-      USE_PYTHON: "ON"
-      BUILD_C: "OFF"
-      BUILD_STATIC: "ON"
-      BUILD_TESTING: "OFF"
-    - CONDA: 38
-      CPP: 17
-      CONFIG: Release
-      EXAMPLES: "ON"
-      TOOLS: "OFF"
-      WINSOCK: "OFF"
-      USE_ARCH: "OFF"
-      USE_PYTHON: "ON"
-      BUILD_C: "ON"
-      BUILD_STATIC: "OFF"
       BUILD_TESTING: "OFF"
 
 install:
@@ -135,7 +135,7 @@ build_script:
   - ls
   - ps: |
       if ($env:BUILD_TESTING -eq "ON") {
-          ctest . --output-on-failure
+          iex "ctest . --output-on-failure -C %CONFIG%"
       }
       elseif ($env:EXAMPLES -eq "ON") {
         iex ".\outputs\runtime\$env:CONFIG\ex_optional_off.exe"
