Fix to output directories for google tests on Windows

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -16,10 +16,12 @@ if(NOT TIMEMORY_BUILD_TESTING)
     set(_EXCLUDE EXCLUDE_FROM_ALL)
 endif()
 
-unset(CMAKE_RUNTIME_OUTPUT_DIRECTORY )
-unset(CMAKE_LIBRARY_OUTPUT_DIRECTORY )
-unset(CMAKE_ARCHIVE_OUTPUT_DIRECTORY )
-unset(CMAKE_PDB_OUTPUT_DIRECTORY )
+if(NOT WIN32)
+    unset(CMAKE_RUNTIME_OUTPUT_DIRECTORY)
+    unset(CMAKE_LIBRARY_OUTPUT_DIRECTORY)
+    unset(CMAKE_ARCHIVE_OUTPUT_DIRECTORY)
+    unset(CMAKE_PDB_OUTPUT_DIRECTORY)
+endif()
 
 set(DEVICE_LANGUAGE CXX)
 if(TIMEMORY_USE_CUDA)
