Use GetProcessIoCounters on windows for get_bytes written and read (#169)
* add srimeta.yaml

* use GetProcessIoCounters for windows

to implement the get_bytes_written and get_bytes_read functions.

I am not sure how to tie it into the component logic so that it shows up
as an available component on windows.

* remove srimeta.yaml

* Protect win_io_counters by ifdef TIMEMORY_WINDOWS

* protect win_io_counters using TIMEMORY_WINDOWS

and do not disable read and written bytes on windows

* no longer skip components/io for win32

* skip forced delay with win_io_counters

I am not sure how to test to see how performance is affected by allowing
this component to be called at any interval.

* fix tests build errors on windows

There are 36 test failures, but at least I can build the tests.
My current cmake config settings are:

```
        "-DBUILD_SHARED_LIBS=ON",
        "-DBUILD_STATIC_LIBS=OFF",
        "-DCMAKE_CONFIGURATION_TYPES=Debug;Release",
        "-DCMAKE_CXX_STANDARD=17",

        "-DTIMEMORY_USE_PYTHON=OFF",
        "-DTIMEMORY_USE_ARCH=OFF",
        "-DTIMEMORY_USE_MPI=OFF",
        "-DTIMEMORY_BUILD_C=ON",
        "-DTIMEMORY_BUILD_EXAMPLES=ON",
        "-DTIMEMORY_BUILD_TESTING=OFF",
        "-DTIMEMORY_BUILD_MINIMAL_TESTING=ON",
        "-DTIMEMORY_BUILD_TOOLS=ON",
        "-DTIMEMORY_BUILD_GOOGLE_TEST=OFF",
        "-DTIMEMORY_USE_WINSOCK=OFF",

        # vtune setting
        "-DTIMEMORY_USE_VTUNE=ON"
```

```
The following tests FAILED:
         27 - api_tests.category (Failed)
         37 - settings_tests.insert_via_args (Failed)
         38 - settings_tests.insert_via_pointer (Failed)
         40 - settings_tests.push_pop (Failed)
         41 - settings_tests.api_copy (Failed)
         42 - flat_tests.parse (Failed)
         43 - flat_tests.get_default (Failed)
         46 - flat_tests.type_trait (Failed)
         48 - flat_tests.general (Failed)
         49 - timeline_tests.parse (Faile

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,6 +16,28 @@ platform:
 environment:
   CONTINUOUS_INTEGRATION: "true"
   matrix:
+    - CONDA: 38
+      CPP: 17
+      CONFIG: Release
+      EXAMPLES: "OFF"
+      TOOLS: "OFF"
+      WINSOCK: "OFF"
+      USE_ARCH: "OFF"
+      USE_PYTHON: "ON"
+      BUILD_C: "ON"
+      BUILD_STATIC: "OFF"
+      BUILD_TESTING: "ON"
+    - CONDA: 37
+      CPP: 14
+      CONFIG: RelWithDebInfo
+      EXAMPLES: "OFF"
+      TOOLS: "OFF"
+      WINSOCK: "OFF"
+      USE_ARCH: "OFF"
+      USE_PYTHON: "ON"
+      BUILD_C: "OFF"
+      BUILD_STATIC: "ON"
+      BUILD_TESTING: "OFF"
     - PYTHON: 36
       CPP: 14
       CONFIG: Debug
@@ -37,28 +59,6 @@ environment:
       USE_PYTHON: "ON"
       BUILD_C: "OFF"
       BUILD_STATIC: "ON"
-      BUILD_TESTING: "OFF"
-    - CONDA: 37
-      CPP: 14
-      CONFIG: RelWithDebInfo
-      EXAMPLES: "OFF"
-      TOOLS: "OFF"
-      WINSOCK: "OFF"
-      USE_ARCH: "OFF"
-      USE_PYTHON: "ON"
-      BUILD_C: "OFF"
-      BUILD_STATIC: "ON"
-      BUILD_TESTING: "OFF"
-    - CONDA: 38
-      CPP: 17
-      CONFIG: Release
-      EXAMPLES: "ON"
-      TOOLS: "OFF"
-      WINSOCK: "OFF"
-      USE_ARCH: "OFF"
-      USE_PYTHON: "ON"
-      BUILD_C: "ON"
-      BUILD_STATIC: "OFF"
       BUILD_TESTING: "OFF"
 
 install:
@@ -127,7 +127,7 @@ build_script:
     -DTIMEMORY_BUILD_TESTING="%BUILD_TESTING%"
     -DTIMEMORY_BUILD_MINIMAL_TESTING="%BUILD_TESTING%"
     -DTIMEMORY_BUILD_TOOLS="%TOOLS%"
-    -DTIMEMORY_BUILD_GOOGLE_TEST=OFF
+    -DTIMEMORY_BUILD_GOOGLE_TEST="%BUILD_TESTING%"
     -DTIMEMORY_USE_WINSOCK="%WINSOCK%"
   - set MSBuildLogger="C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
   - cmake --build . --config "%CONFIG%" --target ALL_BUILD -- /m /v:m /logger:%MSBuildLogger%
@@ -135,9 +135,10 @@ build_script:
   - ls
   - ps: |
       if ($env:BUILD_TESTING -eq "ON") {
-          ctest . --output-on-failure
+          iex "ctest . --output-on-failure -C $env:CONFIG"
       }
-      elseif ($env:EXAMPLES -eq "ON") {
+  - ps: |
+      if ($env:EXAMPLES -eq "ON") {
         iex ".\outputs\runtime\$env:CONFIG\ex_optional_off.exe"
         iex ".\outputs\runtime\$env:CONFIG\ex_cxx_basic.exe"
         iex ".\outputs\runtime\$env:CONFIG\ex_optional_on.exe"
