console-script updates + non-init storage in operation::fini

--- a/cmake/Templates/console-script.py.in
+++ b/cmake/Templates/console-script.py.in
@@ -3,5 +3,6 @@
 __requires__ = 'timemory==@TIMEMORY_VERSION_STRING@'
 
 if __name__ == '__main__':
+    @CONSOLE_EXTRA@
     from @SCRIPT_SUBMODULE@.__main__ import @SCRIPT_FUNCTION@
     @SCRIPT_FUNCTION@()
