--- a/timemory/CMakeLists.txt
+++ b/timemory/CMakeLists.txt
@@ -138,6 +138,8 @@ if(SKBUILD)
 endif()
 
 function(TIMEMORY_PYTHON_CONSOLE_SCRIPT SCRIPT_NAME SCRIPT_SUBMODULE SCRIPT_FUNCTION)
+    set(CONSOLE_EXTRA "${ARGN}")
+
     configure_file(${PROJECT_SOURCE_DIR}/cmake/Templates/console-script.py.in
         ${PROJECT_BINARY_DIR}/bin/${SCRIPT_NAME} @ONLY)
 
@@ -149,7 +151,8 @@ function(TIMEMORY_PYTHON_CONSOLE_SCRIPT SCRIPT_NAME SCRIPT_SUBMODULE SCRIPT_FUNC
 endfunction()
 
 timemory_python_console_script("timemory-plotter" "timemory.plotting" "try_plot")
-timemory_python_console_script("timemory-roofline" "timemory.roofline" "try_plot")
+timemory_python_console_script("timemory-roofline" "timemory.roofline" "try_plot"
+	"import os\n    os.environ[\"TIMEMORY_CXX_PLOT_MODE\"] = \"ON\"")
 timemory_python_console_script("timemory-analyze" "timemory.analyze" "try_analyze")
 
 timemory_python_console_script("timemory-python-profiler" "timemory.profiler" "main")
