--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ jobs:
         - CXX=clang++
         - CMAKE_ARGS='-DTIMEMORY_BUILD_PYTHON_HATCHET=OFF -DTIMEMORY_USE_SANITIZER=ON -DSANITIZER_TYPE=address'
         - BUILD_ARGS='--quick --build-libs shared --python --cxx-standard=17'
+        - CONDA_EXTRA='cxx-compiler compiler-rt pybind11-abi'
     # ------------------------------------------------------------------------ #
     #
     #   Python 3.6 / Python 3.7 / Linux
@@ -145,7 +146,7 @@ before_install:
     conda config --set always_yes yes --set changeps1 no
 
 install:
-  - conda create -c conda-forge -c defaults -n pyctest python=${TRAVIS_PYTHON_VERSION} pyctest scikit-build cmake pip
+  - conda create -c conda-forge -c defaults -n pyctest python=${TRAVIS_PYTHON_VERSION} pyctest scikit-build cmake pip ${CONDA_EXTRA}
   - source activate
   - conda activate pyctest
   - python -m pip install -r requirements.txt
