--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,6 @@ jobs:
       env:
         - TRAVIS_PYTHON_VERSION=3.8
         - CONDA_OS=MacOSX
-        - CC=clang
-        - CXX=clang++
         - CMAKE_ARGS='-DTIMEMORY_BUILD_PYTHON_HATCHET=OFF -DTIMEMORY_USE_SANITIZER=ON -DSANITIZER_TYPE=address'
         - BUILD_ARGS='--quick --build-libs shared --python --cxx-standard=17'
         - CONDA_EXTRA='cxx-compiler compiler-rt pybind11-abi'
@@ -130,8 +128,8 @@ jobs:
 
 before_install:
   # - if [ -d /Library/Developer ]; then sudo rm -Rf /Library/Developer/CommandLineTools/SDKs/* ; fi
-  - which -a ${CC}
-  - which -a ${CXX}
+  - if [ "${CC}" != "" ]; then which -a ${CC}; fi
+  - if [ "${CXX}" != "" ]; then which -a ${CXX}; fi
   - if [ -f /usr/bin/${CC} ]; then export CC=/usr/bin/${CC}; fi
   - if [ -f /usr/bin/${CXX} ]; then export CXX=/usr/bin/${CXX}; fi
   - if [ -d /usr/local/anaconda3/bin ]; then export PATH=/usr/local/anaconda3/bin:$PATH ; fi
