--- a/.travis.yml
+++ b/.travis.yml
@@ -12,19 +12,20 @@ jobs:
     #
     # ------------------------------------------------------------------------ #
     - os: osx
-      osx_image: xcode12u
-      language: generic
+      osx_image: xcode12
+      language: c++
+      python: "3.8"
+      env:
+        - TRAVIS_PYTHON_VERSION=3.8
+        - CONDA_OS=MacOSX
+        - CONFIG_ARGS='-DTIMEMORY_BUILD_PYTHON_HATCHET=OFF -DTIMEMORY_BUILD_PYTHON_LINE_PROFILER=OFF -DTIMEMORY_USE_SANITIZER=ON -DSANITIZER_TYPE=address'
+        - BUILD_ARGS='--quick --build-libs shared --python --cxx-standard=17'
+        - CONDA_EXTRA='cxx-compiler compiler-rt pybind11-abi'
       # addons:
       #  homebrew:
       #    casks:
       #    - anaconda
       #    update: true
-      env:
-        - TRAVIS_PYTHON_VERSION=3.8
-        - CONDA_OS=MacOSX
-        - CMAKE_ARGS='-DTIMEMORY_BUILD_PYTHON_HATCHET=OFF -DTIMEMORY_USE_SANITIZER=ON -DSANITIZER_TYPE=address'
-        - BUILD_ARGS='--quick --build-libs shared --python --cxx-standard=17'
-        - CONDA_EXTRA='cxx-compiler compiler-rt pybind11-abi'
     # ------------------------------------------------------------------------ #
     #
     #   Python 3.6 / Python 3.7 / Linux
@@ -156,8 +157,9 @@ script:
   - if [ -z "${BUILD_TYPE}" ]; then BUILD_TYPE=RelWithDebInfo; fi
   - export BASE_ARGS="-SF --pyctest-model=Continuous --pyctest-site=Travis -j 1 --compile-time-perf ${HOME}/ctp"
   - export CTEST_ARGS="-V --output-on-failure ${CTEST_ARGS}"
-  - export CMAKE_ARGS="-DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install ${CMAKE_ARGS}"
+  - export CMAKE_ARGS="-DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install ${CONFIG_ARGS}"
   - export PYCTEST_ARGS="${BASE_ARGS} -cc ${CC} -cxx ${CXX} --pyctest-build-type=${BUILD_TYPE} ${BUILD_ARGS}"
+  - echo -e "Running command:\npython ./pyctest-runner.py ${PYCTEST_ARGS} -- ${CTEST_ARGS} -- ${CMAKE_ARGS}"
   # main command
   - python ./pyctest-runner.py ${PYCTEST_ARGS} -- ${CTEST_ARGS} -- ${CMAKE_ARGS}
   # cd into build directory
