timemory_remove_components fix + other minor tweaks
- fix to timemory_remove_components
- api.hpp does not include version.h anymore (triggers full rebuild after commit)
- python bindings now consider usage of TIMEMORY_UNITY_BUILD
- disable TIMEMORY_UNITY_BUILD for CircleCI python build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
             --disable-build-caliper
             --disable-build-gotcha
             --cxx-standard=17
-            -- -DTIMEMORY_REQUIRE_PACKAGES=OFF -DTIMEMORY_BUILD_COMPILER_INSTRUMENTATION=OFF -DTIMEMORY_BUILD_KOKKOS_CONFIG=OFF -- -j1
+            -- -DTIMEMORY_REQUIRE_PACKAGES=OFF -DTIMEMORY_BUILD_COMPILER_INSTRUMENTATION=OFF -DTIMEMORY_BUILD_KOKKOS_CONFIG=OFF -DTIMEMORY_UNITY_BUILD=OFF -- -j1
       - run:
           name: test
           command: >
