--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -13,7 +13,7 @@ unset(CMAKE_DEBUG_POSTFIX)
 
 set(_visibility timemory::timemory-default-visibility)
 set(CMAKE_CXX_CLANG_TIDY)
-set(CMAKE_UNITY_BUILD ON)
+set(CMAKE_UNITY_BUILD ${TIMEMORY_UNITY_BUILD})
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN OFF)
 set(CMAKE_INSTALL_DEFAULT_COMPONENT_NAME python)
